# find-package

./: .gitignore  Cargo.toml  README.md  handler.fish  handler.sh  test.js
crates/databases/: Cargo.toml
crates/databases/src/: file_list.rs  macros.rs  main.rs  package_managers.rs
crates/databases/src/package_managers/: common.rs  homebrew.rs  pacman.rs
crates/find_common/: Cargo.toml
crates/find_common/src/: lib.rs
crates/find_core/: Cargo.toml
crates/find_core/src/: lib.rs  macros.rs
crates/find_db/: Cargo.toml
crates/find_package/: Cargo.toml
crates/find_package/src/: cli.rs  db.rs  main.rs  search.rs
crates/pacman/: Cargo.toml
crates/pacman/src/: lib.rs
crates/pacman_parser/: Cargo.toml
crates/pacman_parser/src/: lib.rs
crates/shell_handler/: Cargo.toml  README.md
crates/shell_handler/src/: colors.rs  macros.rs  main.rs
databases/: Cargo.toml
databases/src/: file_list.rs  macros.rs  main.rs  package.rs
databases/src/package_managers/: homebrew.rs  pacman.mirrorlist  pacman.rs
find-core/: Cargo.toml
find-core/src/: lib.rs  macros.rs
shell_handler/: Cargo.toml
shell_handler/src/: main.rs
src/: cli.rs  db.rs  lib.rs  main.rs  search.rs
src/package_getter/: file_list.rs  macros.rs  mod.rs  package_managers.rs
src/package_getter/package_managers/: common.rs  homebrew.rs  pacman.rs
