[workspace] 
members = ["databases", "find-core", "shell_handler"]

[package]
name = "find-package"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.18", features = ["derive", "cargo"] }
reqwest = { version = "0.11.23", features = ["rustls-tls"] }
tokio = { version = "1.35.1", features = ["full"] }
find-core = { path = "./find-core" }

[profile.release]
lto = true
overflow-checks = true
strip = true
